# apps/api/src/urls/service/UrlService.ts
@@ -1,34 +1,28 @@
 import { Result, ok, err } from "@/Result";
 import { Hash } from "./Hash";
-import { UrlRepository } from "../repository/UrlRepository";
+import { ShortenedUrl, UrlRepository } from "../repository/UrlRepository";
 
 export interface UrlServiceType {
-  shorten: (url: string) => Promise<Result<string, Error>>;
+  shorten: (url: string) => Promise<ShortenedUrl>;
   expand: (hash: string) => Promise<Result<string, Error>>;
 }
 
 export class UrlService implements UrlServiceType {
   constructor(private repo: UrlRepository, private hash: Hash) {}
 
-  async shorten(url: string): Promise<Result<string, Error>> {
-    const nextIdResponse = await this.repo.getNextId();
+  async shorten(url: string): Promise<ShortenedUrl> {
+    const nextId = await this.repo.getNextId();
 
-    //TODO: not necessarily pass on error?
-    if (nextIdResponse.kind === "error") {
-      throw nextIdResponse.error;
-    }
-
-    const id = Number(nextIdResponse.value);
+    const id = Number(nextId);
     const hash = this.hash.encode(id);
 
-    const response = await this.repo.create({
+    const shortUrl = await this.repo.create({
       id,
       url,
       hash,
     });
 
-    // TODO: same here, pass on error?
-    return response.kind === "success" ? ok(hash) : err(response.error);
+    return shortUrl;
   }
 
   async expand(hash: string): Promise<Result<string, Error>> {
