# packages/api-client/openapi/spec.yml
@@ -45,12 +45,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                required:
-                  - shortUrl
-                properties:
-                  shortUrl:
-                    $ref: '#/components/schemas/ShortUrl'
+                $ref: '#/components/schemas/ShortUrl'
         
         '400':
           description: Bad request
